[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Completed.png" type="Texture" id=1]
[ext_resource path="res://assets/ContinueHover.png" type="Texture" id=2]
[ext_resource path="res://assets/Continue.png" type="Texture" id=3]
[ext_resource path="res://ChangeStage.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Star Blank.png" type="Texture" id=5]
[ext_resource path="res://LevelCompleted.gd" type="Script" id=6]
[ext_resource path="res://assets/Star Filled.png" type="Texture" id=7]
[ext_resource path="res://assets/Home.png" type="Texture" id=8]
[ext_resource path="res://assets/HomeHover.png" type="Texture" id=9]

[node name="Control" type="Control"]
margin_right = 320.0
margin_bottom = 184.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
goal_met = ExtResource( 7 )
goal_not_met = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 184.0
color = Color( 1, 1, 1, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 1245.0
margin_bottom = 243.0
rect_scale = Vector2( 0.25, 0.25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1240.0
margin_bottom = 238.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 1240.0
margin_bottom = 238.0
texture = ExtResource( 1 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_left = 100.0
margin_top = 150.0
margin_right = 1340.0
margin_bottom = 388.0
rect_scale = Vector2( 0.1, 0.1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
margin_right = 1240.0
margin_bottom = 238.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer2/VBoxContainer"]
margin_right = 1240.0
margin_bottom = 237.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 2 )

[node name="MarginContainer3" type="MarginContainer" parent="."]
margin_left = -20.0
margin_top = 160.0
margin_right = 1220.0
margin_bottom = 398.0
rect_scale = Vector2( 0.08, 0.08 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3"]
margin_right = 1240.0
margin_bottom = 238.0

[node name="TextureButton2" type="TextureButton" parent="MarginContainer3/VBoxContainer"]
margin_right = 1240.0
margin_bottom = 237.0
texture_normal = ExtResource( 8 )
texture_focused = ExtResource( 9 )

[node name="ChangeStage" parent="." instance=ExtResource( 4 )]
position = Vector2( 160, 88 )
scale = Vector2( 1.5, 1.5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 128, 128 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 160, 128 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 192, 128 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
[connection signal="pressed" from="MarginContainer2/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer3/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
